Fix: Calibri breaks in production, replace with Ubuntu

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,11 +1,11 @@
 @charset "utf-8";
 
-@import url('https://fonts.googleapis.com/css?family=Calibri:400,700');
+@import url('https://fonts.googleapis.com/css?family=Ubuntu:400,500,700');
 
 $beige-light: #F2E8CD;
 $beige-lighter: #F4F3ED;
 
-$family-sans-serif: "Calibri", sans-serif;
+$family-sans-serif: "Ubuntu", sans-serif;
 
 $grey-light: $beige-light;
 $grey-lighter: $beige-lighter;
